--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>final-vue-capstone-seed</title>
-  </head>
-  <body>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #cccccc;
+            height: 100vh;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-color: #ccc;
+            background-image: url("https://www.markgray.com.au/images/gallery/medium/magical-melbourne.jpg")
+        }
+    </style>
+    <title>City Tours</title>
+</head>
+
+<body style="margin: 0; padding:0;">
     <noscript>
       <strong>We're sorry but final-vue-capstone-seed doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+</body>
+
 </html>
