--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -9,21 +9,22 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         body {
+            box-sizing: border-box;
             margin: 0;
             padding: 0;
             background-color: #cccccc;
             height: 100vh;
-            background-position: center;
+            background-position: 50% 10%;
             background-repeat: no-repeat;
             background-size: cover;
             background-color: #ccc;
-            background-image: url("https://www.markgray.com.au/images/gallery/medium/magical-melbourne.jpg")
+            background-image: url("https://images.pexels.com/photos/3640993/pexels-photo-3640993.jpeg")
         }
     </style>
     <title>City Tours</title>
 </head>
 
-<body style="margin: 0; padding:0;">
+<body>
     <noscript>
       <strong>We're sorry but final-vue-capstone-seed doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
