--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -17,7 +17,7 @@
             background-repeat: no-repeat;
             background-size: cover;
             background-color: #ccc;
-            background-image: url("https://www.markgray.com.au/images/gallery/medium/magical-melbourne.jpg")
+            background-image: url("https://images.pexels.com/photos/3640993/pexels-photo-3640993.jpeg")
         }
     </style>
     <title>City Tours</title>
