--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -8,12 +8,16 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
-        body {
+        * {
             box-sizing: border-box;
-            margin: 0;
             padding: 0;
+            margin: 0;
+            font-size: 16px;
+        }
+        
+        body {
+            position: relative;
             background-color: #cccccc;
-            height: 100vh;
             background-position: 50% 10%;
             background-repeat: no-repeat;
             background-size: cover;
