--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -22,7 +22,7 @@
             background-repeat: no-repeat;
             background-size: cover;
             background-color: #ccc;
-            background-image: url("https://images.pexels.com/photos/3640993/pexels-photo-3640993.jpeg")
+            background-image: url("https://trello-backgrounds.s3.amazonaws.com/SharedBackground/2400x1600/0b3fc05b573ded1df96795b77b7084ed/photo-1518792260489-e32824ef0bc8.jpg")
         }
     </style>
     <title>City Tours</title>
