--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -21,7 +21,7 @@
             background-color: #cccccc;
             background-position: 50% 10%;
             background-repeat: no-repeat;
-            background-size: cover;
+            background-size: stretch;
             background-color: #ccc;
             background-image: url("https://trello-backgrounds.s3.amazonaws.com/SharedBackground/2400x1600/0b3fc05b573ded1df96795b77b7084ed/photo-1518792260489-e32824ef0bc8.jpg")
         }
